--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mhall313",
+  "name": "melaniehall",
   "version": "1.1.0",
   "description": "Melanie Hall (@mhall313)'s business card",
   "main": "./bin/card.js",
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
-  "author": "mhall313",
+  "author": "Melanie Hall",
   "license": "MIT",
   "dependencies": {
     "boxen": "^4.1.0",
